examples/test/testpolicy2147.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2147
  namespace: namespace294
spec:
  podSelector:
    matchLabels:
      key48: value48
      key13: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value4
          key17: value14
      podSelector:
        matchLabels:
          key5: value22
          key27: value43
